# Mobility-AI-Project

./: .gitignore  CLAUDE.md  README.md  gemini_todo.md  hparam_search.py  main.py  mvp_experiment.py  pyproject.toml  todo.md
data/bmw_i3_driving_cycles/: README.md
data/mcmaster_lg18650hg2/: README.md
docs/: A_research_plan  A_research_plan_2.md  A_research_plan_3.md
docs/blog/: forecasting-ev-demand-sumo-graphwavenet.md
docs/presentation/: sumo_graphwavenet_outline.md
report/: gemini_phase1_report.md  mvp_report.md  sumo_graph_wavenet_progress.md
results/: final_results.json
results/sumo_demand/: learned_adj.npy  results.json
scripts/: train_sumo.py
src/: __init__.py  data_loader.py  evaluate.py  models.py  sumo_dataset.py  train.py
src/models/: __init__.py  graph_wavenet.py
src/sumo/: generator.py  graph.py  parser.py
sumo/: data_generator.py  parse_outputs.py  train_demand.py
